--- a/views/Footer.ejs
+++ b/views/Footer.ejs
@@ -25,7 +25,7 @@
                     <li><a href="/Home.html">Inicio</a></li>
                     <li><a href="">Animales</a></li>
                     <li><a href="">Protectoras</a></li>
-                    <li><a href="">Sobre Nosotros</a></li>
+                    <li><a href="/AboutUs.html">Sobre Nosotros</a></li>
                     <li><a href="/Contact.html">Contacto</a></li>
                     <li><a href="/Ayuda.html">Ayuda</a></li>
                 </ul>
