--- a/views/Header.ejs
+++ b/views/Header.ejs
@@ -14,12 +14,15 @@
                 <div class="menu"  id="menu_id">
                     <a href="/Home.html">Inicio</a>
                     <a href="/Animals.html">Animales</a>
-                    <a href="/Shelters.html">Protectoras</a>
+                    <a href="/listarProtectoras.html">Protectoras</a>
                     <a href="/AboutUs.html">Sobre Nosotros</a>
                     <a href="/Contact.html">Contacto</a>
                     <a href="/Ayuda.html">Ayuda</a>
                     <% if ( login ) { %>
                     <a href="/profile"> tu perfil</a>
+                    <% if ( currentUser != undefined) { %>
+                        <a href="/gestionUsuarios" class="list-user"> usuarios</a>   
+                    <% } %>
                     <a href="/Logout" class="logout">desconectar</a>
                     <% } %>
                     <a class="login-option" href="/Login.html">Iniciar sesión</a>
