--- a/views/ModificarPerfilAdoptante.ejs
+++ b/views/ModificarPerfilAdoptante.ejs
@@ -111,7 +111,7 @@
             <div class="container" style="max-width: 700px; margin-bottom: 75px;">
                 <div class="row">
                     <div class="col">
-<!--TODO eliminar-->    <button type="button" class="button" style="margin-top: 25px; background-color: #1a4b83;">Confirmar Cambios</button>
+<!--TODO eliminar-->    <button type="submit" class="button" style="margin-top: 25px; background-color: #1a4b83;">Confirmar Cambios</button>
                     </div>
                 </div>
             </div>
