--- a/views/VerPerfilAdoptante.ejs
+++ b/views/VerPerfilAdoptante.ejs
@@ -20,7 +20,7 @@
             <h1 style="margin-top: 80px; margin-bottom: 50px; margin-right: 1200px;">Perfil</h1> <!--210px-->
         </div>
         
-        <form id="reg_adopter" method="POST">
+        <form id="reg_adopter">
             <div class="container" style="max-width: 150px;">
                 <div class="row">
                     <div class="fotoadoptante" style="margin-top: 25px;">
@@ -70,7 +70,7 @@
             <div class="container" style="max-width: 700px; margin-bottom: 75px;">
                 <div class="row">
                     <div class="col">
-<!--   <button type="button" class="button" style="margin-top: 25px; background-color: #1a4b83;" onclick="window.location.href='/modprofile'">Editar Perfil</button> -->  
+                        <button type="button" class="button" style="margin-top: 25px; background-color: #1a4b83;"> <a href="/modprofile">Editar Perfil</a></button> 
                     </div>
                 </div>
             </div>
