--- a/views/Shelters.ejs
+++ b/views/Shelters.ejs
@@ -7,67 +7,260 @@
     <title>Protectoras - Adoptame</title>
     <link rel="stylesheet" href="/css/general.css">
     <link rel="stylesheet" href="/css/signup.css">
+    <link rel="stylesheet" href="/css/shelter.css">
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <%- include('./Header'); %>
-
     <div id=content>
-        <div class="container" style="max-width: 630px;">
+        <div class="container-fluid">
+            <img src="/resources/img/animal-banner.png" alt="" style="width: 800px; float: right; margin-top: -20px; margin-right: -15px;">
             <div class="row">
-                <div class="col sign-up-page" style="margin-top: 110px;"> <!--130px-->
-                    <h1>¡Esta seccion estara disponible en el proximo sprint!</h1>
-                   
-                    <img src="/resources/img/building.png" width="450px">
-                    <h2>Ten paciencia, estamos programando con el maximo cuidado para que disfrutes de la mejor experiencia de usuario posible.</h2>
-                    
-                    <div style="margin-top: 30px; margin-bottom: 100px;">
-                        <!--<button id="redend_button" class="button" onclick=""> Inicio</button>-->
-                    </div>
+                <div class="col">
+                    <h1 style="margin-left: 200px; margin-top: -335px; font-weight: 600; font-size: 50px; max-width: 600px; background-color: #ffffff;">Encuentra un nuevo amigo</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col" style="margin-left: 200px; margin-top: -160px">
+                    <input style="background-color: #ffffff;" type="text" class="search" />
+		            <div class="line-1"></div>
+		            <div class="line-2"></div>
                 </div>
             </div>
         </div>
-    </div>
-    <%- include('./Footer'); %>
-</body>
+            <div class="container-fluid" style="margin-top: 100px; display: flex; align-items: center; justify-content: center; max-width: 1400px;">
 
-<!DOCTYPE html>
-<html lang="es">
+                <!-- Protectoras (Cards) -->
+                <div class="row">
+                    <!-- Animalia -->
+                    <div class="col">
+                        <div class="row d-flex justify-content-center" style="margin-bottom: 30px;">
+                            <div class="my-card">
+                                <img src="/resources/img/protectora_lista1.jpg">
+                                <div class="card-body">
+                                    <div class="row">
+                                        <div class="col"><h5>Animalia</h5></div>
+                                        <div class="col"><h6>Coslada</h6></div>
+                                    </div>
+                                    <p>Animalia es una organizacion sin animo de lucro centrada en dar una buena vida a animales sin hogar</p>
+                                </div>
+                                <div class="row">
+                                    <div class="col my-card-information">
+                                        <i class="fas fa-map-marker-alt"></i> &nbsp; AnimaliaProtectora@gmail.com
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-5 my-card-information">
+                                        <i class="fas fa-mars" style="font-size: 20px;"></i> &nbsp; +34 264 346 356
+                                    </div>
+                                </div>
+                                
+                                <button type="button" class="my-card-button">Más Información</button>
+                            </div>
+                        </div>
+                    </div>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animales - Adoptame</title>
-    <link rel="stylesheet" href="/css/general.css">
-    <link rel="stylesheet" href="/css/signup.css">
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/listarperros.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
-</head>
+                    <!-- Gatoshelter-->
+                    <div class="col">
+                        <div class="row d-flex justify-content-center" style="margin-bottom: 30px;">
+                            <div class="my-card">
+                                <img src="/resources/img/protectora_lista2.jpg">
+                                <div class="card-body">
+                                    <div class="row">
+                                        <div class="col"><h5>Gatoshelter</h5></div>
+                                        <div class="col"><h6>Galicia</h6></div>
+                                    </div>
+                                    <p>Gatoshelter tiene por objetivo que ningun gato se quede sin familia !contactanos sin compromiso!</p>
+                                </div>
+                                <div class="row">
+                                    <div class="col my-card-information">
+                                        <i class="fas fa-map-marker-alt"></i> &nbsp; GatoshelterGalicia@gatoMail.com
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-5 my-card-information">
+                                        <i class="fas fa-mars" style="font-size: 20px;"></i> &nbsp; +34 264 346 356
+                                    </div>
+                                </div>
+                                
+                                <button type="button" class="my-card-button">Más Información</button>
+                            </div>
+                        </div>
+                    </div>
 
+                    <!-- New Life-->
+                    <div class="col">
+                        <div class="row d-flex justify-content-center" style="margin-bottom: 30px;">
+                            <div class="my-card">
+                                <img src="/resources/img/protectora_lista3.jpg">
+                                <div class="card-body">
+                                    <div class="row">
+                                        <div class="col"><h5>New Life</h5></div>
+                                        <div class="col"><h6>Todo España</h6></div>
+                                    </div>
+									<p>En new life nos centramos en dar una segunda oportunidad a mascotas que han perdido una familia, nuesto enfasis esta en reeducar, y realocar</p>
+                                </div>
+                                <div class="row">
+                                    <div class="col my-card-information">
+                                        <i class="fas fa-map-marker-alt"></i> &nbsp; newLifeShelter@hhrrnl.com
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-5 my-card-information">
+                                        <i class="fas fa-mars" style="font-size: 20px;"></i> &nbsp; +34 347 298 102
+                                    </div>
+                                </div>
+                                
+                                <button type="button" class="my-card-button">Más Información</button>
+                            </div>
+                        </div>
+                    </div>
 
+                    <!-- Exotimales -->
+                    <div class="col">
+                        <div class="row d-flex justify-content-center" style="margin-bottom: 30px;">
+                            <div class="my-card">
+                                <img src="/resources/img/protectora_lista4.jpg">
+                                <div class="card-body">
+                                    <div class="row">
+                                        <div class="col"><h5>Exotimales</h5></div>
+                                        <div class="col"><h6>Madrid, Barcelona</h6></div>
+                                    </div>
+                                    <p>¿Tienes una mascota exotica? ¿No sabes como cuidarla? ¡Contactanos!</p>
+                                </div>
+                                <div class="row">
+                                    <div class="col my-card-information">
+                                        <i class="fas fa-map-marker-alt"></i> &nbsp; Exotimalesmascots@clietserviceex.com 
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-5 my-card-information">
+                                        <i class="fas fa-mars" style="font-size: 20px;"></i> &nbsp; +34 447 283 289
+                                    </div>
+                                </div>
+                                
+                                <button type="button" class="my-card-button">Más Información</button>
+                            </div>
+                        </div>
+                    </div>
 
-<body>
-    <%- include('./Header'); %>
+                    <!-- Volaran-->
+                    <div class="col">
+                        <div class="row d-flex justify-content-center" style="margin-bottom: 30px;">
+                            <div class="my-card">
+                                <img src="/resources/img/protectora_lista5.jpg">
+                                <div class="card-body">
+                                    <div class="row">
+                                        <div class="col"><h5>Volaran</h5></div>
+                                        <div class="col"><h6>Andalucia</h6></div>
+                                    </div>
+                                    <p>En Volaran le damos a tus pajaros  unas nuevas alas para que vuelen directamente a tu hogar, y tu corazon!</p>
+                                </div>
+                                <div class="row">
+                                    <div class="col my-card-information">
+                                        <i class="fas fa-map-marker-alt"></i> &nbsp; volaranContact@bussinesmail.com
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-5 my-card-information">
+                                        <i class="fas fa-mars" style="font-size: 20px;"></i> &nbsp; +34 134 445 121
+                                    </div>
+                                </div>
+                                
+                                <button type="button" class="my-card-button">Más Información</button>
+                            </div>
+                        </div>
+                    </div>
 
-    <div id=content>
-        <div class="container" style="max-width: 630px;">
-            <div class="row">
-                <div class="col sign-up-page" style="margin-top: 110px;"> <!--130px-->
-                    <h1>¡Esta seccion estara disponible en el proximo sprint!</h1>
+                    <!-- Naturdoge-->
+                    <div class="col">
+                        <div class="row d-flex justify-content-center" style="margin-bottom: 30px;">
+                            <div class="my-card">
+                                <img src="/resources/img/protectora_lista6.jpg">
+                                <div class="card-body">
+                                    <div class="row">
+                                        <div class="col"><h5>Naturdoge</h5></div>
+                                        <div class="col"><h6>Comunidad Valenciana</h6></div>
+                                    </div>
+                                    <p>Naturdoge es una Protectoras que cuida de todo tipo de animales</p>
+                                </div>
+                                <div class="row">
+                                    <div class="col my-card-information">
+                                        <i class="fas fa-map-marker-alt"></i> &nbsp; ClienteND@gmail.com
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-5 my-card-information">
+                                        <i class="fas fa-mars" style="font-size: 20px;"></i> &nbsp; +34 264 425 543
+                                    </div>
+                                </div>
+                                
+                                <button type="button" class="my-card-button">Más Información</button>
+                            </div>
+                        </div>
+                    </div>
 
-                    <img src="/resources/img/building.png" width="450px">
-                    <h2>Ten paciencia, estamos programando con el maximo cuidado para que disfrutes de la mejor experiencia de usuario posible.</h2>
-
-                    <div style="margin-top: 30px; margin-bottom: 100px;">
-                        <!--<button id="redend_button" class="button" onclick=""> Inicio</button>-->
+                    <!--Aquahome-->
+                    <div class="col">
+                        <div class="row d-flex justify-content-center" style="margin-bottom: 30px;">
+                            <div class="my-card">
+                                <img src="/resources/img/protectora_lista7.jpg">
+                                <div class="card-body">
+                                    <div class="row">
+                                        <div class="col"><h5>Aquahome</h5></div>
+                                        <div class="col"><h6>Islas baleares</h6></div>
+                                    </div>
+                                    <p>Aquahome le da una nueva vida a todas esas criaturas que viven en el agua.</p>
+                                </div>
+                                <div class="row">
+                                    <div class="col my-card-information">
+                                        <i class="fas fa-map-marker-alt"></i> &nbsp; Aquahome@AHMail.com
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-5 my-card-information">
+                                        <i class="fas fa-mars" style="font-size: 20px;"></i> &nbsp; +34 515 555 355
+                                    </div>
+                                </div>
+                                
+                                <button type="button" class="my-card-button">Más Información</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
     </div>
 
+    <script>
+        $(document).ready(function() {
+		$('.search').click(function() {
+				$('.search').addClass('active');
+				$('.line-1').css({
+						'transform': 'rotate(45deg)',
+						'top': '0px',
+						'left': '0px'
+				});
+				$('.line-2').css({
+						'height':'40px',
+						'opacity':'1'
+				});
+		});
+		$('.line-1, .line-2').click(function() {
+				$('.search').removeClass('active').val('');
+				$('.line-1').css({
+						'transform': 'rotate(-45deg)',
+						'top': '-20px',
+						'left': '45px'
+				});
+				$('.line-2').css({
+						'height':'0px',
+						'opacity':'0'
+				});
+
+		});
+});
+    </script>
     <%- include('./Footer'); %>
 </body>
