Modificar perfil, back

--- a/views/Header.ejs
+++ b/views/Header.ejs
@@ -16,7 +16,7 @@
                     <a href="/Animals.html">Animales</a>
                     <a href="/Shelters.html">Protectoras</a>
                     <% if ( user != undefined && user.userType === "admin" ) {%>
-                    <a href="/Requests">Peticiones</a>
+                    <a href="/solicitudesProtectoras">Peticiones</a>
                     <% } %>
                     <% if ( user == undefined || user.userType != "admin" ) {%>
                         <a href="/AboutUs.html">Sobre Nosotros</a>
