--- a/views/Login.ejs
+++ b/views/Login.ejs
@@ -42,7 +42,7 @@
                     </form>
                     <% if(errMsg !== null) { %>
                         <div class="error alert alert-warning">
-                            <span>Dirección de correo y/o contraseña no válidos</span>
+                            <span><%= errMsg %></span>
                         </div> <% } %>
                 </div>
             </div>
