--- a/views/detalleprotectora.ejs
+++ b/views/detalleprotectora.ejs
@@ -19,15 +19,10 @@
     <body>
         <%- include('./header'); %>
                             </div>       
-        <div class="container externoarriba">
+        <div class="container externoarriba cuadrarHeader">
         <div class="row col-md-offset-2 col-md-10 custyle">
             <div class="col-lg-12">
               <div class="col-md-4">
-               <figure>
-                <img src= <%=foto%> class="img-thumbnail"  height= 600 width="600">
-                 
-                <h1 >
-                </figure>
                 <div class="col-md-30">
                 <div class="panel  ">
                         <div class="colorcuadro tipoletra ">
@@ -49,17 +44,6 @@
                     </div>
               </div>
               <div class="col-xs-12 col-sm-8">
-                <div class="panel ">
-                    <div class="colorcuadro tipoletra">
-                            Ciudad:
-                    </div>
-                    <div class="panel-body">
-                        <span style= "color:rgb(115, 115, 115);"><%=ciudad%></span>
-                        <div class="list-decks">
-                            
-                        </div>        
-                    </div>
-                </div>
                 
                     <div class="panel ">
                             <div class="colorcuadro tipoletra">
@@ -84,18 +68,21 @@
                                 </div>        
                             </div>
                         </div>
+                        <div class=" panel  ">
+                            <div class="colorcuadro tipoletra">
+                                    Webpage:
+                            </div>
+                            <div class="panel-body">
+                                <span style= "color:rgb(115, 115, 115);"><%=webpage%></span>
+                                <div class="list-decks">
+                                   
+                                </div>        
+                            </div>
+                        </div>
               </div>
             </div>
           </div>
         </div>
-    
-        <form action="/Shelters.html" method="GET">
-    
-    
-            <div class="boton">
-                <input type="submit" class="btn btn-info volver" value="Volver">
-            </div>
-        </form>
             </div>
     <%- include('./Footer'); %>
 </body>
