--- a/views/Animals.ejs
+++ b/views/Animals.ejs
@@ -23,11 +23,11 @@
             <img src="/resources/img/animal-banner.png" alt="" style="width: 800px; float: right; margin-top: -20px; margin-right: -15px;">
             <div class="row">
                 <div class="col">
-                    <h1 style="margin-left: 200px; margin-top: -335px; font-weight: 600; font-size: 50px; max-width: 600px; background-color: #ffffff;">Encuentra un nuevo amigo</h1>
+                    <h1 style="margin-top: 400px; margin-left: 200px; margin-top: 150px; font-weight: 600; font-size: 50px; max-width: 600px; background-color: #ffffff;">Encuentra un nuevo amigo</h1>
                 </div>
             </div>
             <div class="row">
-                <div class="col" style="margin-left: 200px; margin-top: -160px">
+                <div class="col" style="margin-left: 200px; margin-top: 60px">
                     <input style="background-color: #ffffff;" type="text" class="search" />
 		            <div class="line-1"></div>
 		            <div class="line-2"></div>
