--- a/views/ListarAdoptantes.ejs
+++ b/views/ListarAdoptantes.ejs
@@ -30,54 +30,23 @@
                           <tr>
                             <th scope="col">Nombres</th>
                             <th scope="col">Apellidos</th>
-                            <th scope="col">Fecha de Registro</th>
+                            <th scope="col">Fecha de Nacimiento</th>
                             <th scope="col">Email</th>
+                            <th scope="col">Telefono</th>
                             <th scope="col">Editar</th>
                           </tr>
                         </thead>
                         <tbody>
-                          <tr>
-                            <th scope="row">Mark</th>
-                            <td>Perez</td>
-                            <td>20/03/2020</td>
-                            <td><a href="#">l1@gmail.com</a></td>
-                            <td><a href="editarAdoptante/{id}"><ion-icon name="create-outline"></ion-icon></a></td>
-                          </tr>
-                          <tr>
-                            <th scope="row">Daniela</th>
-                            <td>Garcia</td>
-                            <td>19/03/2020</td>
-                            <td><a href="#">l2@gmail.com</a></td>
-                            <td><a href="editarAdoptante/{id}"><ion-icon name="create-outline"></ion-icon></a></td>
-                          </tr>
-                          <tr>
-                            <th scope="row">Juan</th>
-                            <td>Gonzalez</td>
-                            <td>18/03/2020</td>
-                            <td><a href="#">l3@gmail.com</a></td>
-                            <td><a href="editarAdoptante/{id}"><ion-icon name="create-outline"></ion-icon></a></td>
-                          </tr>
-                          <tr>
-                            <th scope="row">Luis</th>
-                            <td>Cerrón</td>
-                            <td>17/03/2020</td>
-                            <td><a href="#">l4@gmail.com</a></td>
-                            <td><a href="editarAdoptante/{id}"><ion-icon name="create-outline"></ion-icon></a></td>
-                          </tr>
-                          <tr>
-                            <th scope="row">Alberto</th>
-                            <td>Partida</td>
-                            <td>16/03/2020</td>
-                            <td><a href="#">l5@gmail.com</a></td>
-                            <td><a href="editarAdoptante/{id}"><ion-icon name="create-outline"></ion-icon></a></td>
-                          </tr>
-                          <tr>
-                            <th scope="row">Eduardo</th>
-                            <td>Ortega</td>
-                            <td>15/03/2020</td>
-                            <td><a href="#">l6@gmail.com</a></td>
-                            <td><a href="editarAdoptante/{id}"><ion-icon name="create-outline"></ion-icon></a></td>
-                          </tr>
+                          <% usuarios.map( usuario => { %>
+                            <tr>
+                              <th scope="row"><%= usuario.forename %></th>
+                              <td><%= usuario.surnames %></td>
+                              <td><%= usuario.birthdate %></td>
+                              <td><a href="<%= usuario.email %>"><%= usuario.email %></a></td>
+                              <td><%= usuario.tlf %></td>
+                              <td><a href="/profile/<%= usuario.email %>">ver</a></td>
+                            </tr>
+                           <% }) %>
                         </tbody>
                       </table>
                 </div>
