Vista de modificar protectora

--- a/public/css/modificarProtectora.css
+++ b/public/css/modificarProtectora.css
@@ -43,3 +43,19 @@
     font-size: 15px;
     padding: 30px 30px;
 }
+
+p {
+    font-size: 15px;
+    font-size: 1.5rem;    
+    line-height: 1.333333334;
+    margin-bottom: 20px;
+    margin-bottom: 2rem;
+    text-align: justify;
+}
+
+.two-columns {
+    
+    -webkit-column-count: 2; /* Chrome, Safari, Opera */
+    -moz-column-count: 2; /* Firefox */
+    column-count: 2;
+}
