--- a/public/css/detalleprotectora.css
+++ b/public/css/detalleprotectora.css
@@ -9,7 +9,7 @@
     color: rgb(115, 115, 115);
 }
 .panel {
-    border-color: rgb(32, 31, 31);
+    border-color: rgb(0, 0, 0);
 }
 
 .boton{
@@ -65,8 +65,13 @@
     color:black;
     font-size: 20px;
 }
-
+.margenArriba{
+	margin-bottom:30px;
+}
 .margenBajo{
 	margin-bottom:10px;
 }
 
+.letra{
+    font-size: 20px;
+}
