--- a/views/detalleprotectora.ejs
+++ b/views/detalleprotectora.ejs
@@ -19,16 +19,17 @@
     <body>
         <%- include('./header'); %>
                             </div>       
-        <div class="container externoarriba cuadrarHeader">
-        <div class="row col-md-offset-2 col-md-10 custyle">
+        <div class="container externoarriba cuadrarHeader ">
+            <img src="/resources/img/descripprotect.png" alt="" style="width:600px ; margin-top: -20px; margin-right: -15px;">
+        <div class="row col-md-offset-0 col-md-10 custyle">
             <div class="col-lg-12">
               <div class="col-md-4">
                 <div class="col-md-30">
-                <div class="panel  ">
-                        <div class="colorcuadro tipoletra ">
+                <div class="panel color  ">
+                        <div class="colorcuadro tipoletra negrita">
                             Nombre:  <span style= "color:rgb(115, 115, 115);"><%=nombre%></span> 
                         </div>
-                        <div class="panel-body">
+                        <div class="panel-body ">
                            
                             <div class="list-decks">
                                 <p>Correo: <span class="glyphicon glyphicon-envelope"></span>
@@ -45,8 +46,8 @@
               </div>
               <div class="col-xs-12 col-sm-8">
                 
-                    <div class="panel ">
-                            <div class="colorcuadro tipoletra">
+                    <div class="panel">
+                            <div class="color tipoletra">
                                     Dirección:
                             </div>
                             <div class="panel-body">
@@ -57,11 +58,11 @@
                             </div>
                         </div>
                     
-                    <div class=" panel  ">
-                            <div class="colorcuadro tipoletra">
+                    <div class=" panel colorcuadro ">
+                            <div class=" tipoletra ">
                                     Detalles:
                             </div>
-                            <div class="panel-body">
+                            <div class="panel-body ">
                                 <span style= "color:rgb(115, 115, 115);"><%=descripcion%></span>
                                 <div class="list-decks">
                                    
