--- a/public/css/modificarProtectora.css
+++ b/public/css/modificarProtectora.css
@@ -12,7 +12,7 @@
 
 
 .titulo{
-    margin-top: 80px;
+    margin-top: 100px;
     font-family: 'Bree Serif', serif;
     text-align: center;
     color: black;
@@ -42,20 +42,28 @@
     width: 100%;
     font-size: 15px;
     padding: 30px 30px;
+    text-align: center;
 }
 
-p {
-    font-size: 15px;
-    font-size: 1.5rem;    
-    line-height: 1.333333334;
-    margin-bottom: 20px;
-    margin-bottom: 2rem;
-    text-align: justify;
-}
-
-.two-columns {
+.three-columns {
     
-    -webkit-column-count: 2; /* Chrome, Safari, Opera */
-    -moz-column-count: 2; /* Firefox */
-    column-count: 2;
+    -webkit-column-count: 3; /* Chrome, Safari, Opera */
+    -moz-column-count: 3; /* Firefox */
+    column-count: 3;
+    
+    -webkit-column-gap: 20px; /* Chrome, Safari, Opera */
+    -moz-column-gap: 20px; /* Firefox */
+    column-gap: 20px;
+    
+    -webkit-column-gap: 2rem; /* Chrome, Safari, Opera */
+    -moz-column-gap: 2rem; /* Firefox */
+    column-gap: 2rem;
+}
+
+.alineacion{
+    margin-top: 50px;
+}
+
+.imagen{
+    padding-top: 110px;
 }
