--- a/views/GestionUsuarios.ejs
+++ b/views/GestionUsuarios.ejs
@@ -32,7 +32,7 @@
                             <th scope="col">Apellidos</th>
                             <th scope="col">Email</th>
                             <th scope="col">Rol</th>
-                            <th scope="col">Acciones</th>
+                            <th scope="col">Eliminar</th>
                           </tr>
                         </thead>
                         <tbody>
@@ -42,7 +42,7 @@
                             <td><%= user.surnames %></td>
                             <td><a href="#"><%= user.email %></a></td>
                             <td><%= user.userType %></td>
-                            <td><ion-icon name="create-outline"></ion-icon><a href="#" onclick="delete_user(user.email)"><ion-icon name="close-outline"></ion-icon></a></td>
+                            <td><a href="/deleteUser/<%= user.email %>"><ion-icon name="close-outline"></ion-icon></a></td>
                           </tr>
                         <% }) %>
                         </tbody>
@@ -51,15 +51,6 @@
             </div>
         </div>
     </div>
-    <script>
-        function delete_user(id_user) {
-          var return_delete = confirm("¿Seguro que quiere eliminar al usuario con email "+id_user+"?");
-          if(return_delete){
-            alert("Usuario eliminado");
-            // bbdd
-          }
-        }
-    </script> 
 
     <%- include('./Footer'); %>
 </body>
